fixed alignment of image overlay

--- a/css/main2.css
+++ b/css/main2.css
@@ -17,14 +17,15 @@
     box-sizing: content-box;
     position: absolute;
     top: 0;
-    bottom: 0;
-    left: 15px;
-    right: 0;
-    height: calc(100% - 15px);
-    width: calc(100% - 30px);
-    opacity: 0.75;
-    transition: 1.5s ease;
+    left: 0;
+    opacity: 0.8;
+    transition: 20s ease;
     background-color: gray;
+  }
+
+  figure {
+      display: inline-block;
+      position: relative;  /*override bootstrap  */
   }
 
 /* Media Queries */
@@ -38,8 +39,8 @@
     .responsive-img {
         max-width: 350px;
         min-width: 300px;
-        
     }
+    
     .port-div {
         text-align: center
     }
